Version MObile dashboard toggle bug fixed

--- a/src/app/app.module.css
+++ b/src/app/app.module.css
@@ -66,7 +66,7 @@
         position: absolute;
         background-color: white ;
         position: absolute;
-        height: 95svh;
+        height: 95dvh;
         width: 100vw;
         top: 4%;
      
